# paper-graph-manager

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  test_e2e.py
backend/: .env.example  AGENTS.md  agent.yaml  main.py  requirements.txt
backend/paper_graph/: annotate.py  chat_agent.py  chat_tools.py  database.py  export.py  graph.py  ingest.py  kimi_tools.py  notes.py
backend/scripts/: batch_download_pdfs.py
backend/tests/: conftest.py  test_annotate.py  test_chat_agent_stream.py  test_chat_sessions.py  test_chat_tools.py  test_database.py  test_export.py  test_graph.py  test_ingest.py  test_main.py  test_main_extra.py  test_notes.py
docs/: technical-decisions.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/public/kimi-web/: index.html
frontend/public/kimi-web/assets/: _baseUniq-tCLO4j-c.js  arc-D_eOWg6s.js  architectureDiagram-VXUJARFQ-BWYys2Rd.js  blockDiagram-VD42YOAC-BOaND1WF.js  c4Diagram-YG6GDRKO-CRsXhUJy.js  channel--ruqp84U.js  chunk-4BX2VUAB-Dh3RYIHZ.js  chunk-55IACEB6-B9i9-O9A.js  chunk-B4BG7PRW-BPIrMXl2.js  chunk-DI55MBZ5-j8FKfnkD.js  chunk-FMBD7UC4-gZJTMkZU.js  clone-BLr-ti36.js  (+39 more)
frontend/src/: App.tsx  Papers.test.tsx  chatApi.test.ts  index.css  main.tsx  pages.test.tsx
frontend/src/components/: ErrorAlert.tsx  FileTree.tsx  Layout.tsx  NoteEditor.tsx  PixiGraph.tsx
frontend/src/hooks/: use-mobile.ts
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Graph.tsx  Notes.tsx  PaperDetail.tsx  Papers.tsx
frontend/src/services/: api.test.ts  api.ts
frontend/src/types/: index.ts
(+4 files in other folders)
