[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-graph-manager"
version = "0.1.0"
description = "Paper Graph Manager Backend"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
pythonpath = ["backend"]

[tool.coverage.run]
source = ["backend/paper_graph"]
omit = ["backend/tests/*"]
